fl#valid_tests/tests/valid/spl.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#valid#spl
  RET
    success
    fail
    failed_validity_tests
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/valid/spl"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY valid#spl BEGIN
    "splv1" => "Plain SPL V1 created by NI v1.36-20151216"
    "splv20" => "Plain SPL V2.0 created by WeiDU 238.02"
    "spwi304" => "Fireball, BG2 Fixpack V11, alpha 1"
    "spwi122" => "SPL V2.0 IWD2 Ice Dagger"
    "spin129" => "SPL V1 IWD Eye of Venom"
    "sppr201" => "SPL V1 PST Aid"
  END

  ACTION_PHP_EACH valid#spl AS file => desc BEGIN
    LAF test_valid
      STR_VAR
        file = EVAL "%file_root%/%file%.spl"
        desc
      RET
        success
        fail
        failed_validity_tests
    END
  END
END

LAF fl#valid_tests#tests#valid#spl RET success fail failed_validity_tests END
