fl#valid_tests/tests/invalid/spl.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#spl
  RET
    success
    fail
    failed_invalidity_tests
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/spl"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#spl BEGIN
    "nosig", "signature" => "Plain SPL V1 with erased signature"
    "nover", "signature" => "Plain SPL V1 with erased version"
    "splv10", "signature" => "Plain SPL with incorrect V1.0 version"
    "dmghd", "minimum size" => "Plain SPL V1 with 0x20 bytes deleted at offset 0x10"
    "wrngoff", "offset too low" => "Plain SPL V1 with 0x30 deducted off the effect offset"
    "wrngoff2", "offset too high" => "Plain SPL V1 with 0x30 added to the effects offset"
    "spwi304", "more bytes" => "Fireball, BG2 Fixpack V11, alpha 1, with 1 deducted off extended-effect count on the 3rd ability"
    //"spwi618", "don't know yet (hole)" => "Spell Deflection from BG:EE 2.5.15.1 after DS a5f3287b39c29c8a1188def0c19a2deec7676137"
  END

  ACTION_PHP_EACH invalid#spl AS key => desc BEGIN
    LAF test_invalid
      STR_VAR
        file = EVAL "%file_root%/%key_0%.spl"
        fail_mode = EVAL "%key_1%"
        desc
      RET
        success
        fail
        failed_invalidity_tests
    END
  END
END

LAF fl#valid_tests#tests#invalid#spl RET success fail failed_invalidity_tests END
